Bug 1660463: Only allow printing of a selection when mDisallowSelectionPrint is false. r=jwatt, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D88028